--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+{% extends "base.html" %}
 
+{% block title %}404 - 页面未找到{% endblock %}
+
+{% block content %}
+    <h1>404 - 页面未找到</h1>
+    <p>你访问的页面不存在，请检查 URL 或返回 <a href="{{ url_for('main.home') }}">首页</a>。</p>
+{% endblock %}
