--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -159,7 +159,7 @@
 
     <footer class="bg-light text-center text-lg-start mt-5">
         <div class="text-center p-3">
-            © 2025 Flask博客demo. All Rights Reserved.
+            © 2025 <a href="https://github.com/Yezi99999">叶子</a>博客demo. All Rights Reserved.
         </div>
     </footer>
 
